--- a/src/main/resources/com/example/laboratory/PayMonitor/cashMonitor.fxml
+++ b/src/main/resources/com/example/laboratory/PayMonitor/cashMonitor.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.laboratory.controllers.PayMonitorController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="657.0" prefWidth="788.0" style="-fx-background-color: #3fd7eb;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.laboratory.controllers.PayMonitorController">
+   <children>
+      <AnchorPane prefHeight="658.0" prefWidth="132.0">
+         <children>
+            <Button layoutX="32.0" layoutY="88.0" mnemonicParsing="false" onAction="#sendPersons" text="Persons" />
+            <Button layoutX="40.0" layoutY="235.0" mnemonicParsing="false" onAction="#sendLoan" text="Loan" />
+            <Button layoutX="29.0" layoutY="396.0" mnemonicParsing="false" onAction="#sendElements" text="Elements" />
+            <Button layoutX="21.0" layoutY="548.0" mnemonicParsing="false" onAction="#sendInformation" text="Information" />
+         </children>
+      </AnchorPane>
+      <Separator layoutX="132.0" orientation="VERTICAL" prefHeight="658.0" prefWidth="0.0" style="-fx-background-color: #141414;" />
+      <Label layoutX="381.0" layoutY="74.0" text="Pay Monitors">
+         <font>
+            <Font name="System Bold" size="28.0" />
+         </font>
+      </Label>
+      <TableView fx:id="tablePayMonitor" layoutX="136.0" layoutY="343.0" prefHeight="316.0" prefWidth="654.0">
+        <columns>
+          <TableColumn fx:id="nameMonitorCl" prefWidth="329.0" text="Name Monitor" />
+          <TableColumn fx:id="payCl" prefWidth="324.0" text="Pay" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
