--- a/src/main/resources/com/example/laboratory/Persons/persons.fxml
+++ b/src/main/resources/com/example/laboratory/Persons/persons.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -21,5 +22,10 @@
          <font>
             <Font name="Rockwell" size="18.0" />
          </font></Button>
+      <Label layoutX="289.0" layoutY="39.0" text="Choice a Item">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
