--- a/src/main/resources/com/example/laboratory/Persons/teacher.fxml
+++ b/src/main/resources/com/example/laboratory/Persons/teacher.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,51 +12,56 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.laboratory.controllers.TeacherController">
+<AnchorPane prefHeight="697.0" prefWidth="842.0" style="-fx-background-color: #3fd7eb;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.laboratory.controllers.TeacherController">
 
 
     <children>
-        <AnchorPane prefHeight="600.0" prefWidth="128.0">
+        <AnchorPane prefHeight="697.0" prefWidth="131.0">
             <children>
 
-                <Button layoutX="30.0" layoutY="251.0" mnemonicParsing="false" onAction="#sendLoad" prefHeight="25.0" prefWidth="73.0" text="Load">
+                <Button layoutX="30.0" layoutY="251.0" mnemonicParsing="false" onAction="#sendLoan" prefHeight="25.0" prefWidth="73.0" text="Loan">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
-                <Button layoutX="13.0" layoutY="384.0" mnemonicParsing="false" onAction="#sendPayMonitor" prefHeight="25.0" prefWidth="106.0" text="Pay Monitor">
+                <Button layoutX="16.0" layoutY="393.0" mnemonicParsing="false" onAction="#sendPayMonitor" prefHeight="25.0" prefWidth="106.0" text="Pay Monitor">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
 
-                <Button layoutX="18.0" layoutY="548.0" mnemonicParsing="false" onAction="#sendInformation" prefHeight="25.0" prefWidth="100.0" text="Information">
+                <Button layoutX="14.0" layoutY="531.0" mnemonicParsing="false" onAction="#sendInformation" prefHeight="25.0" prefWidth="100.0" text="Information">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Button>
-                <ImageView fitHeight="77.0" fitWidth="94.0" layoutX="30.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="69.0" fitWidth="73.0" layoutX="34.0" layoutY="571.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\robot.png" />
+               </image></ImageView>
+                <ImageView fitHeight="77.0" fitWidth="88.0" layoutX="30.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\prestamo.png" />
-                    </image></ImageView>
-                <ImageView fitHeight="77.0" fitWidth="88.0" layoutX="23.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\Persons.png" />
+                        <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\personas - Color.png" />
                     </image></ImageView>
                 <Button layoutX="38.0" layoutY="119.0" mnemonicParsing="false" onAction="#sendPersons" text="Persons" />
-                <ImageView fitHeight="77.0" fitWidth="77.0" layoutX="29.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\payMonitorCard.png" />
-                    </image>
+                <ImageView fitHeight="84.0" fitWidth="88.0" layoutX="28.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\tarjeta pago a color.png" />
+               </image>
                 </ImageView>
-                <ImageView fitHeight="77.0" fitWidth="88.0" layoutX="26.0" layoutY="448.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\informacion-De-laboratorio.png" />
-                    </image>
+                <ImageView fitHeight="77.0" fitWidth="88.0" layoutX="26.0" layoutY="432.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\Informacion persona a color.png" />
+               </image>
                 </ImageView>
+            <ImageView fitHeight="84.0" fitWidth="88.0" layoutX="33.0" layoutY="158.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="C:\Users\user.LAPTOP-AEROGVI0\Downloads\Scene First\Laboratory\src\main\java\com\example\laboratory\images\loan-Img.png" />
+               </image>
+            </ImageView>
             </children>
         </AnchorPane>
-        <TableView fx:id="tableStudent" layoutX="135.0" layoutY="330.0" prefHeight="271.0" prefWidth="667.0">
+        <TableView fx:id="tableTeacher" layoutX="135.0" layoutY="435.0" onMouseClicked="#select" prefHeight="261.0" prefWidth="706.0">
             <columns>
                 <TableColumn fx:id="nameCL" prefWidth="165.0" text="Name" />
                 <TableColumn fx:id="documentCL" prefWidth="160.0" text="Document" />
@@ -65,39 +71,52 @@
             </columns>
         </TableView>
         <Separator layoutX="132.0" orientation="VERTICAL" prefHeight="600.0" prefWidth="3.0" />
-        <Label layoutX="162.0" layoutY="69.0" text="Name">
+        <Label layoutX="174.0" layoutY="137.0" text="Name">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Label layoutX="147.0" layoutY="142.0" text="Document">
+        <Label layoutX="171.0" layoutY="210.0" text="Document">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Label layoutX="484.0" layoutY="133.0" text="Course">
+        <Label layoutX="493.0" layoutY="209.0" text="Course">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Label layoutX="501.0" layoutY="70.0" text="Age">
+        <Label layoutX="503.0" layoutY="137.0" text="Age">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="tfAge" layoutX="558.0" layoutY="66.0" prefHeight="25.0" prefWidth="177.0" />
-        <TextField fx:id="tfDocument" layoutX="240.0" layoutY="130.0" prefHeight="25.0" prefWidth="177.0" />
-        <TextField fx:id="tfCourse" layoutX="564.0" layoutY="130.0" prefHeight="25.0" prefWidth="177.0" />
-        <Label layoutX="292.0" layoutY="194.0" text="CodeRoom">
+        <TextField fx:id="tfAge" layoutX="558.0" layoutY="134.0" prefHeight="25.0" prefWidth="177.0" />
+        <TextField fx:id="tfDocument" layoutX="250.0" layoutY="207.0" prefHeight="25.0" prefWidth="177.0" />
+        <TextField fx:id="tfCourse" layoutX="558.0" layoutY="208.0" prefHeight="25.0" prefWidth="177.0" />
+        <Label layoutX="283.0" layoutY="270.0" text="CodeRoom">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="tfcoderoom" layoutX="373.0" layoutY="191.0" prefHeight="25.0" prefWidth="177.0" />
-        <Button fx:id="btnDelete" layoutX="373.0" layoutY="263.0" mnemonicParsing="false" onAction="#deleteTable" prefHeight="25.0" prefWidth="88.0" text="Delete" />
-        <Button fx:id="btnFind" layoutX="524.0" layoutY="263.0" mnemonicParsing="false" onAction="#findTable" prefHeight="25.0" prefWidth="69.0" text="Find" />
-        <Button fx:id="btnAdd" layoutX="265.0" layoutY="263.0" mnemonicParsing="false" onAction="#addTable" prefHeight="25.0" prefWidth="69.0" text="Add" />
-        <Button fx:id="btnUpdate" layoutX="634.0" layoutY="263.0" mnemonicParsing="false" onAction="#updateTable" prefHeight="25.0" prefWidth="88.0" text="Update" />
-        <TextField fx:id="tfName" layoutX="233.0" layoutY="68.0" />
+        <TextField fx:id="tfcoderoom" layoutX="377.0" layoutY="267.0" prefHeight="25.0" prefWidth="177.0" />
+        <Button fx:id="btnDelete" layoutX="514.0" layoutY="336.0" mnemonicParsing="false" onAction="#deleteTable" prefHeight="25.0" prefWidth="88.0" text="Delete" />
+        <Button fx:id="btnAdd" layoutX="250.0" layoutY="336.0" mnemonicParsing="false" onAction="#addTable" prefHeight="25.0" prefWidth="69.0" text="Add" />
+        <Button fx:id="btnUpdate" layoutX="377.0" layoutY="336.0" mnemonicParsing="false" onAction="#updateTable" prefHeight="25.0" prefWidth="88.0" text="Update" />
+        <TextField fx:id="tfName" layoutX="245.0" layoutY="134.0" />
+      <TextField fx:id="tfFilter" layoutX="269.0" layoutY="63.0" onKeyReleased="#filter" prefHeight="25.0" prefWidth="410.0" />
+      <Button layoutX="684.0" layoutY="63.0" mnemonicParsing="false" onAction="#clearTfFilter" prefHeight="25.0" prefWidth="39.0" text="X" />
+      <ChoiceBox fx:id="choiceBoxSelect" layoutX="147.0" layoutY="63.0" prefHeight="25.0" prefWidth="117.0" />
+      <Label layoutX="174.0" layoutY="46.0" text="Select Option:" />
+      <Button layoutX="27.0" layoutY="658.0" mnemonicParsing="false" onAction="#sendElements" prefHeight="25.0" prefWidth="88.0" text="Elements">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button layoutX="639.0" layoutY="336.0" mnemonicParsing="false" onAction="#clearTf" prefHeight="25.0" prefWidth="88.0" text="Clear" />
+      <Label layoutX="392.0" prefHeight="39.0" prefWidth="203.0" text="   Teacher">
+         <font>
+            <Font name="System Bold" size="28.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
